# docs/swagger.json
@@ -384,7 +384,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/internalaudit.ResourceInventoryItem"
+                                "$ref": "#/definitions/models.ClientTable"
                             }
                         }
                     },
@@ -1411,6 +1411,10 @@
                     "type": "integer",
                     "example": 80
                 },
+                "total_tables_audited": {
+                    "type": "integer",
+                    "example": 8
+                },
                 "total_tampered": {
                     "type": "integer",
                     "example": 2
@@ -1535,23 +1539,6 @@
                             "type": "integer"
                         }
                     }
-                }
-            }
-        },
-        "internalaudit.ResourceInventoryItem": {
-            "type": "object",
-            "properties": {
-                "latest_log_id": {
-                    "type": "string",
-                    "example": "log-abc"
-                },
-                "resource": {
-                    "type": "string",
-                    "example": "orders"
-                },
-                "total_logs": {
-                    "type": "integer",
-                    "example": 500
                 }
             }
         },
@@ -1754,6 +1741,39 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ClientTable": {
+            "type": "object",
+            "properties": {
+                "client_id": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_action": {
+                    "type": "string"
+                },
+                "last_actor": {
+                    "type": "string"
+                },
+                "last_updated_at": {
+                    "type": "string"
+                },
+                "resource": {
+                    "description": "Field alias untuk kompatibilitas frontend",
+                    "type": "string"
+                },
+                "row_count": {
+                    "type": "integer"
+                },
+                "table_name": {
                     "type": "string"
                 }
             }
